# MICRO-COURANT

./: .eslintrc.js  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  jest.config.js  package.json
.github/workflows/: ci.yml
backend/api-gateway/: .env.example  package.json
backend/api-gateway/src/: index.js
backend/api-gateway/tests/: auth.test.js  rateLimiter.test.js
backend/billing-engine/: .env.example  Dockerfile  jest.config.js  package.json
backend/telemetry/: .env.example  package.json
contracts/: Cargo.toml
contracts/consumption_billing/: Cargo.toml
contracts/energy_meter_registry/: Cargo.toml
contracts/grid_settlement/: Cargo.toml
contracts/p2p_energy_trading/: Cargo.toml
contracts/subsidy_governance/: Cargo.toml
docs/api/: api-reference.md
docs/architecture/: system-architecture.md
docs/guides/: deployment.md  onboarding.md  smart-contracts.md
frontend/governance-dashboard/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/household-dashboard/: index.html  package.json  vite.config.js
frontend/operator-dashboard/: index.html  package.json  vite.config.js
infra/iot-simulator/: .env.example  package.json
infra/kubernetes/: README.md  configmaps.yaml  ingress.yaml  monitoring.yaml  namespaces.yaml  secrets.yaml  statefulsets.yaml
sdk/js/: package.json
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs  error.rs  lib.rs  types.rs
shared/circuit-breaker/: package.json
tests/integration/: end-to-end.test.js  improvements.test.js  meter-billing-settlement.test.js
(+94 files in other folders)
