[workspace]
members = [
    "contracts/*",
    "sdk/rust"
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/micro-courant/micro-courant"

[workspace.dependencies]
soroban-sdk = "21.0.0"
soroban-sdk-macros = "21.0.0"
soroban-token-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = true
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
opt-level = 0
overflow-checks = true
