[package]
name = "micro-courant-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Micro-Courant energy grid integration"
license = "MIT"

[dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
stellar-xdr = { version = "20.0.0", features = ["curr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
